feat(skills): rebuild maintenance workflows and tooling
Align maintenance decisions with live overlay policy and reviewed sources.